:pencil: review and update comments